Added Sign Up form and fields

--- a/views/application.html
+++ b/views/application.html
@@ -7,6 +7,7 @@
   <body>
     <div class="nav">
       <a class="logo" href="/">moviePress</a>
+      <a class="title" href="/sign-up">Sign Up</a>
     </div>
     <div class="yield">${yield}</div>
     <div class="footer">
