Added Sign Up Post path. Added body-parser middleware.

--- a/views/users/sign-up.html
+++ b/views/users/sign-up.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <h1>Sign Up</h1>
-  <form action="#" method="post">
+  <form action="/sign-up" method="post">
     <label for="username">Username</label>
     <input name="username" type="text" require>
     <label for="email">Email</label>
