Added Cookies to Log in Session. Added Sign Out Link/Path.

--- a/views/application.html
+++ b/views/application.html
@@ -7,7 +7,8 @@
   <body>
     <div class="nav">
       <a class="logo" href="/">moviePress</a>
-      <a class="title" href="/sign-up">Sign Up</a>
+      <a class="text" href="/sign-out">Sign Out</a>
+      <a class="text" href="/sign-up">Sign Up</a>
     </div>
     <div class="yield">${yield}</div>
     <div class="footer">
