--- a/views/application.html
+++ b/views/application.html
@@ -9,6 +9,7 @@
       <a class="logo" href="/">moviePress</a>
       <a class="text" href="/sign-out">Sign Out</a>
       <a class="text" href="/sign-up">Sign Up</a>
+      <a class="text" href="/sign-in">Sign In</a>
     </div>
     <div class="yield">${yield}</div>
     <div class="footer">
