--- a/views/users/sign-in.html
+++ b/views/users/sign-in.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <h1>Sign In</h1>
-  <form action="#" method="post">
+  <form action="/sign-in" method="post">
     <label for="email">Email</label>
     <input name="email" type="text" required>
     <label for="password">Password</label>
